--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Webpack App</title>
     </head>
     <body>
+    <h2>appH2</h2>
+    <weather-component/>
      <div id="app"></div>
     </body>
     
