--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h2>appH2</h2>
     <weather-component/>
      <div id="app"></div>
-    <script
-            src="https://github.com/poli-vorobeva/weatherVue/blob/master/appJs.js"
-            type="text/javascript"></script>
+<!--    <script-->
+<!--            src="https://github.com/poli-vorobeva/weatherVue/blob/master/appJs.js"-->
+<!--            type="text/javascript"></script>-->
     </body>
     
 </html>
