--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Webpack App</title>
+        <title>Weather</title>
     </head>
     <body>
-    <h2>appH2</h2>
     <weather-component/>
      <div id="app"></div>
-<!--    <script-->
-<!--            src="https://github.com/poli-vorobeva/weatherVue/blob/master/appJs.js"-->
-<!--            type="text/javascript"></script>-->
     </body>
     
 </html>
