--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <title>Weather</title>
     </head>
     <body>
-    <weather-component/>
+
      <div id="app"></div>
+    <weather-component></weather-component>
     </body>
     
 </html>
